# Spectrogram

./: CMakeLists.txt  main.glade
src/: fft.c  fft.h  main.c  render.c  render.h  sound.c  sound.h
